# mlflow-api.rs

./: Cargo.toml  Makefile.toml  mlflow-test.Dockerfile
.github/workflows/: rust.yml
examples/: cli.rs
src/: client.rs  errors.rs  experiments.rs  lib.rs  run_data.rs  runs.rs  structures.rs
src/api/: experiments.rs  mod.rs  run_data.rs  runs.rs
tests/: test_api.rs  test_client.rs  test_experiment.rs  test_run.rs  test_run_data.rs
