[package]
name = "mlflow_api"
version = "0.1.0"
authors = ["François Mockers <mockersf@gmail.com>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = "0.9"

[dev-dependencies]
structopt = "0.3"
rand = "0.7"
spectral = "0.6"

[features]
integration-tests = []
